# tools

./: .gitignore  LICENSE  README.md
github-scan/: .env.example  .gitignore  README.md  main.js  osint_JustDaz_2026-02-26T04-27-08.json  package.json
github-scan/src/: cli.js  colors.js  config.js  detection.js  github.js  http.js  reporter.js  scanner.js
pen/: .gitignore  README.md  main.py  requirements.txt
pen/src/: banner.py  config.py  dns_enum.py  http_recon.py  net.py  port_scanner.py  reporter.py
pen/src/exploit/: bruteforce.py  default_creds.py  fuzzer.py  payloads.py  shells.py
pen/src/util/: encoder.py  wordlists.py
pen/src/vuln/: __init__.py  cmdi.py  cors.py  lfi.py  open_redirect.py  sqli.py  xss.py
web-scraping/: Cargo.toml  README.md
web-scraping/src/: anti_bot.rs  browser_fetcher.rs  config.rs  endpoints.rs  fetcher.rs  headers.rs  info_disclosure.rs  js_analyzer.rs  main.rs  proxy.rs  rate_limiter.rs  retry.rs  scanner.rs  secrets.rs  user_agent.rs
