[package]
name = "web-recon"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
governor = "0.8"
url = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
nonzero_ext = "0.3"
headless_chrome = "1"
